Finished statements, concept details, exact matches - Added an update endpoint to API, not in use yet. May become useful   in future when biothings explorer allows for the chaining of   arbitrary endpoints, to update the semantic data for those   endpoints.
